compiler/tests/should-fail/MalleableDeclassify.via
/* MalleableDowngradeError */

fun main() {
    val result: int = declassify 42 from {a->} to {b->};
}

host a
host b
